--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -125,7 +125,7 @@ ion-footer {
 }
 
 .icon-row {
-  background-color: #33ED9C;
+  background-color: #393e46;
   border-radius: 25px;
   padding: 10px;
   margin-left: 40px;
@@ -141,7 +141,7 @@ ion-footer {
 }
 
 .icon-col ion-icon {
-  color: black;
+  color: #00adb5; 
 }
 
 .large-icon {
@@ -150,5 +150,5 @@ ion-footer {
 }
 
 .active-icon {
-  color: rgb(54, 32, 198) !important; // Utiliza !important para garantizar que se aplique
+  color: rgb(218, 217, 220) !important; // Utiliza !important para garantizar que se aplique
 }
