--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -30,6 +30,26 @@
       <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
       <p class="icon-label">Promociones</p>
     </div>
+    <div class="icon-container">
+      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <p class="icon-label">Garantia y soporte</p>
+    </div>
+    <div class="icon-container">
+      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <p class="icon-label">Wallet y propiedad</p>
+    </div>
+    <div class="icon-container">
+      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <p class="icon-label">Devoluciones e intercambios</p>
+    </div>
+    <div class="icon-container">
+      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <p class="icon-label">Ecommerce</p>
+    </div>
+    <div class="icon-container">
+      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <p class="icon-label">Wish-list</p>
+    </div>
   </div>
   
   <!-- Rest of your home page markup -->
