--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -23,33 +23,35 @@
 
   <div class="centered-content">
     <div class="icon-container">
-      <img src="assets/menus/cupones.png" class="button-icon" (click)="openMenucuponesModal()">
+      <ion-icon name="pricetag-outline" class="button-icon" (click)="openMenucuponesModal()"></ion-icon>
       <p class="icon-label">Cupones</p>
     </div>
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <ion-icon name="ribbon-outline" class="button-icon" (click)="openMenupromocionesModal()"></ion-icon>
       <p class="icon-label">Promociones</p>
     </div>
+    
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <ion-icon name="shield-outline" class="button-icon" (click)="openMenugarantiasoporteModal()"></ion-icon>
       <p class="icon-label">Garantia y soporte</p>
     </div>
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <ion-icon name="wallet-outline" class="button-icon" (click)="openMenuwalletModal()"></ion-icon>
       <p class="icon-label">Wallet y propiedad</p>
     </div>
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
-      <p class="icon-label">Devoluciones e intercambios</p>
+      <ion-icon name="swap-horizontal-outline" class="button-icon" (click)="openMenudevolucionesModal()"></ion-icon>
+      <p class="icon-label">Intercambio</p>
     </div>
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <ion-icon name="cart-outline" class="button-icon" (click)="openMenusecommerceModal()"></ion-icon>
       <p class="icon-label">Ecommerce</p>
     </div>
     <div class="icon-container">
-      <img src="assets/menus/ofertas.png" class="button-icon" (click)="openMenupromocionesModal()">
+      <ion-icon name="heart-outline" class="button-icon" (click)="openMenuswishlistModal()"></ion-icon>
       <p class="icon-label">Wish-list</p>
     </div>
+    
   </div>
   
   <!-- Rest of your home page markup -->
