--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<!-- <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Inicia sesion para:</ion-title>
   </ion-toolbar>
@@ -48,4 +48,4 @@
     transform: rotate(360deg) translateY(0px);
   }
 }
-</style>
+</style> -->
